[gd_scene format=3 uid="uid://wd0trlkmus3"]

[ext_resource type="Script" uid="uid://c3thlbfirpi83" path="res://Scripts/PlayerStats.gd" id="1_0exr2"]
[ext_resource type="Texture2D" uid="uid://cddq2pqfiyia4" path="res://Assets/Kenney/Grid.svg" id="1_eqhe0"]
[ext_resource type="Theme" uid="uid://gaki48q5hftc" path="res://Themes/GameTheme.tres" id="1_haeiw"]
[ext_resource type="Script" uid="uid://drbithaitpukd" path="res://Scripts/Shop.gd" id="2_4fxa8"]
[ext_resource type="Script" uid="uid://bilyoutardbvk" path="res://Scripts/ShopQueue.gd" id="2_ex6dp"]
[ext_resource type="Texture2D" uid="uid://cvjjdojnal7o7" path="res://Assets/Kenney/Cursor.png" id="2_k77ap"]
[ext_resource type="Script" uid="uid://drwphox75l0em" path="res://Scripts/UnitResource.gd" id="3_ex6dp"]
[ext_resource type="Resource" uid="uid://xdj3ayk30444" path="res://Units/Thor.tres" id="4_cg2kh"]
[ext_resource type="Script" uid="uid://bklrncyxf57w" path="res://Scripts/FocusManager.gd" id="4_hvuor"]
[ext_resource type="Script" uid="uid://dpgvq4s54gfmg" path="res://Scripts/GameStateManager.gd" id="5_rb7ul"]
[ext_resource type="Script" uid="uid://ba6qwy5xsj3t7" path="res://mouse_sprite.gd" id="6_i2arf"]
[ext_resource type="Script" uid="uid://cosr4qrn1kb71" path="res://Scripts/Unit.gd" id="7_0exr2"]
[ext_resource type="Material" uid="uid://dlhhnx45g42ri" path="res://Materials/unit.tres" id="7_5cvvu"]
[ext_resource type="Script" uid="uid://h45001on6p0r" path="res://Scripts/ShopManager.gd" id="7_cg2kh"]
[ext_resource type="Script" uid="uid://dma5ow0mpynxh" path="res://Scripts/GameTimer.gd" id="9_icjtl"]
[ext_resource type="Script" uid="uid://c86217m1sekx4" path="res://Scripts/SectionDisplay.gd" id="9_sao6o"]
[ext_resource type="Script" uid="uid://cu606eit2hnd6" path="res://Scripts/MoneyLabel.gd" id="11_sao6o"]
[ext_resource type="Texture2D" uid="uid://d301wn0llt2ct" path="res://Assets/Units/dummy.png" id="13_4fxa8"]
[ext_resource type="Texture2D" uid="uid://ct7ahocabdtbm" path="res://Assets/PandorasBox/base.png" id="19_6qjax"]
[ext_resource type="Script" uid="uid://bbjt63v3jqfil" path="res://Scripts/PandorasBox.gd" id="19_k8u5j"]
[ext_resource type="Texture2D" uid="uid://b4xwgpu7ew32e" path="res://Assets/PandorasBox/lid.png" id="20_88a4u"]
[ext_resource type="Texture2D" uid="uid://cwf2mfxnots3" path="res://Assets/PandorasBox/eyes.png" id="21_0ptlf"]

[sub_resource type="Animation" id="Animation_0p1ba"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PandorasBox/Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PandorasBox/Lid:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -97.99999)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PandorasBox/Eyes:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-13, -27.999992)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PandorasBox/Base:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PandorasBox/Lid:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PandorasBox/Eyes:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n1fdl"]
resource_name = "firing"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PandorasBox/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PandorasBox/Lid:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -200), Vector2(0, -200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PandorasBox/Eyes:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, -250), Vector2(-13, -250)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PandorasBox/Base:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.2617993877991494, -0.2617993877991494, 0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PandorasBox/Lid:rotation")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.2617993877991494, 0.2617993877991494, 0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PandorasBox/Eyes:rotation")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.2617993877991494, -0.2617993877991494, 0.0]
}

[sub_resource type="Animation" id="Animation_k8u5j"]
resource_name = "idle"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PandorasBox/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 50), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PandorasBox/Lid:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1, 1.19, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -97.99999), Vector2(0, -97.99999), Vector2(0, -60), Vector2(0, -70), Vector2(0, -97.99999)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PandorasBox/Eyes:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.0333333, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-13, -27.999992), Vector2(-13, -50), Vector2(-13, -27.999992)]
}

[sub_resource type="Animation" id="Animation_igvw6"]
resource_name = "to_fire"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PandorasBox/Base:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PandorasBox/Lid:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -97.99999), Vector2(0, -200)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PandorasBox/Eyes:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-13, -27.999992), Vector2(-13, -250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0p1ba"]
_data = {
&"RESET": SubResource("Animation_0p1ba"),
&"firing": SubResource("Animation_n1fdl"),
&"idle": SubResource("Animation_k8u5j"),
&"to_fire": SubResource("Animation_igvw6")
}

[node name="GameScene" type="Node2D" unique_id=1309565388]

[node name="PlayerStats" type="Node" parent="." unique_id=1776936839]
script = ExtResource("1_0exr2")

[node name="ShopQueue" type="Node" parent="." unique_id=1354138094]
script = ExtResource("2_ex6dp")
units = Array[ExtResource("3_ex6dp")]([ExtResource("4_cg2kh")])

[node name="GameStateManager" type="Node" parent="." unique_id=594612751 groups=["GameManager"]]
script = ExtResource("5_rb7ul")

[node name="BuyTimeTimer" type="Timer" parent="GameStateManager" unique_id=754912126]
wait_time = 15.0
one_shot = true

[node name="PreRoundTimer" type="Timer" parent="GameStateManager" unique_id=1396043593]
wait_time = 3.0
one_shot = true

[node name="RoundTimer" type="Timer" parent="GameStateManager" unique_id=451211138]
wait_time = 60.0
one_shot = true

[node name="PostRoundTimer" type="Timer" parent="GameStateManager" unique_id=1594374737]
wait_time = 5.0
one_shot = true

[node name="Screen" type="Control" parent="." unique_id=1412506660]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 54.13977
offset_top = 34.0
offset_right = 1864.8602
offset_bottom = 1052.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_4fxa8")

[node name="Shop" type="PanelContainer" parent="Screen" unique_id=117144800 node_paths=PackedStringArray("shop_queue", "player_stats")]
custom_minimum_size = Vector2(1000, 300)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_haeiw")
script = ExtResource("7_cg2kh")
shop_queue = NodePath("../../ShopQueue")
player_stats = NodePath("../../PlayerStats")

[node name="MarginContainer" type="MarginContainer" parent="Screen/Shop" unique_id=730343077]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ShopElements" type="HBoxContainer" parent="Screen/Shop/MarginContainer" unique_id=2107210662]
layout_mode = 2

[node name="SectionContainer" type="PanelContainer" parent="Screen" unique_id=203383172]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -805.5
offset_top = -844.0
offset_right = -629.5
offset_bottom = -793.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_haeiw")

[node name="SectionLabel" type="RichTextLabel" parent="Screen/SectionContainer" unique_id=653674044]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 32
text = "Game STATE"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_sao6o")

[node name="ClockContainer" type="PanelContainer" parent="Screen" unique_id=798945036]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -813.5
offset_top = -922.0
offset_right = -621.5
offset_bottom = -835.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_haeiw")

[node name="RichTextLabel" type="RichTextLabel" parent="Screen/ClockContainer" unique_id=1755572858]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
text = "Time"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("9_icjtl")

[node name="MoneyContainer" type="PanelContainer" parent="Screen" unique_id=1909392381]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -813.5
offset_top = -699.0
offset_right = -621.5
offset_bottom = -612.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_haeiw")

[node name="MoneyLabel" type="RichTextLabel" parent="Screen/MoneyContainer" unique_id=1752711861 node_paths=PackedStringArray("player_stats")]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/normal_font_size = 64
bbcode_enabled = true
text = "money"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("11_sao6o")
player_stats = NodePath("../../../PlayerStats")

[node name="UI" type="CanvasLayer" parent="." unique_id=642158115]

[node name="Board" type="Sprite2D" parent="." unique_id=1255175370]
modulate = Color(0.6654342, 0.4226154, 0.74744385, 1)
texture_filter = 2
texture_repeat = 2
position = Vector2(960, 384)
scale = Vector2(0.4, 0.4)
texture = ExtResource("1_eqhe0")
region_enabled = true
region_rect = Rect2(2, 2, 2540, 1792)

[node name="Camera2D" type="Camera2D" parent="." unique_id=1568371280]
anchor_mode = 0

[node name="P1MouseSprite" type="Sprite2D" parent="." unique_id=445692134 node_paths=PackedStringArray("mouse_control")]
z_index = 1
texture_filter = 1
position = Vector2(507.00003, -101)
scale = Vector2(5, 5)
texture = ExtResource("2_k77ap")
offset = Vector2(6, 6)
script = ExtResource("6_i2arf")
mouse_control = NodePath("../P1Mouse")

[node name="P1Mouse" type="Node2D" parent="." unique_id=362869788]
position = Vector2(500, 75)

[node name="P1FocusManager" type="Node" parent="P1Mouse" unique_id=269751576 node_paths=PackedStringArray("mouse_object", "shop_elements")]
script = ExtResource("4_hvuor")
mouse_object = NodePath("..")
shop_elements = NodePath("../../Screen/Shop/MarginContainer/ShopElements")

[node name="TargetDummy" type="Node2D" parent="." unique_id=1008819936 groups=["Units"]]
position = Vector2(1420, 382)
script = ExtResource("7_0exr2")
player_owner = 2

[node name="Sprite" type="Sprite2D" parent="TargetDummy" unique_id=1195982391]
texture_filter = 1
material = ExtResource("7_5cvvu")
scale = Vector2(-5, 5)
texture = ExtResource("13_4fxa8")
region_rect = Rect2(0, 16, 16, 16)
metadata/_edit_lock_ = true

[node name="PandorasBox" type="Node2D" parent="." unique_id=934045646]
position = Vector2(1688, 393)
script = ExtResource("19_k8u5j")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PandorasBox" unique_id=944654250]
root_node = NodePath("../..")
libraries/ = SubResource("AnimationLibrary_0p1ba")

[node name="Base" type="Sprite2D" parent="PandorasBox" unique_id=484251659]
texture_filter = 1
scale = Vector2(10, 10)
texture = ExtResource("19_6qjax")

[node name="Lid" type="Sprite2D" parent="PandorasBox" unique_id=1710980127]
texture_filter = 1
position = Vector2(0, -97.99999)
scale = Vector2(10, 10)
texture = ExtResource("20_88a4u")

[node name="Eyes" type="Sprite2D" parent="PandorasBox" unique_id=567336721]
texture_filter = 1
position = Vector2(-13, -27.999992)
scale = Vector2(8, 8)
texture = ExtResource("21_0ptlf")

[connection signal="timeout" from="GameStateManager/BuyTimeTimer" to="GameStateManager" method="_on_buy_time_timer_timeout"]
[connection signal="timeout" from="GameStateManager/PreRoundTimer" to="GameStateManager" method="_on_pre_round_timer_timeout"]
[connection signal="timeout" from="GameStateManager/RoundTimer" to="GameStateManager" method="_on_round_timer_timeout"]
[connection signal="timeout" from="GameStateManager/PostRoundTimer" to="GameStateManager" method="_on_post_round_timer_timeout"]
